# strack-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  YARNGPT_DOC.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 74f222f5d82f_init_schema.py  a3f9c1d8e224_add_pending_voice_confirmations.py  c4d5e6f7a8b9_avatar_url_to_text.py
app/: main.py
app/core/: config.py  deps.py  security.py
app/db/: base.py
app/models/: __init__.py  feed.py  friends.py  goals.py  milestones.py  mixins.py  settings.py  steps.py  streaks.py  undo.py  user.py  voice.py
app/routers/: auth.py  feed.py  friends.py  goals.py  leaderboard.py  milestones.py  onboarding.py  settings.py  steps.py  streaks.py  sync.py  undo.py  users.py  voice.py
app/schemas/: auth.py  feed.py  friends.py  goals.py  leaderboard.py  milestones.py  onboarding.py  settings.py  steps.py  streaks.py  sync.py  user.py  voice.py
app/services/: daily_goal_service.py  feed_service.py  goal_service.py  google_oauth.py  leaderboard_service.py  milestone_service.py  step_aggregation.py  streak_service.py  undo_service.py  username_service.py  voice_action_service.py  voice_confirmation_service.py  voice_intent_service.py  voice_localization.py  voice_service.py
app/services/stt/: google_stt_client.py  provider.py
app/services/tts/: provider.py  yarngpt_client.py
tests/: conftest.py  test_auth_endpoints.py  test_goal_service.py  test_steps_endpoints.py  test_streak_service.py  test_undo_service.py  test_voice_confirmation_service.py  test_voice_intent_service.py  test_voice_listen_endpoint.py
