[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "strack-api"
version = "0.1.0"
description = "STRACK accessible step-tracking backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7.4",
    # passlib (unmaintained since 2020) self-tests bcrypt on first use and
    # bcrypt>=4.1 turned a silent-truncate quirk into a hard ValueError,
    # breaking every password hash/verify call. Pin below that line.
    "bcrypt>=4.0.1,<4.1",
    "google-auth>=2.30",
    "requests>=2.31",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
