[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "strack-api"
version = "0.1.0"
description = "STRACK accessible step-tracking backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7.4",
    # passlib (unmaintained since 2020) self-tests bcrypt on first use and
    # bcrypt>=4.1 turned a silent-truncate quirk into a hard ValueError,
    # breaking every password hash/verify call. Pin below that line.
    "bcrypt>=4.0.1,<4.1",
    "google-auth>=2.30",
    "requests>=2.31",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Endpoint tests share one Postgres async engine/connection pool across the
# whole session (see tests/conftest.py) - asyncpg connections are bound to
# the event loop that created them. Both fixtures AND test functions must
# run on that same session-scoped loop, or the second test onward fails
# with "Future attached to a different loop" the moment it touches a
# connection the first test's (different, function-scoped) loop opened.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
